Updated darkmode to preload, preventing flickering
 Changes to be committed:
	modified:   prices.json
	modified:   static/style.css
	modified:   templates/base.html
	modified:   tickers_backup.pkl
	modified:   tickers_backup_metadata.json

--- a/static/style.css
+++ b/static/style.css
@@ -131,15 +131,9 @@
     margin-bottom: 10px;
 }
 
-body{
-    background-color: rgb(255, 255, 255);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode:soft-light;
-}
+
 .dark{
-    background-color: rgb(32, 33, 39);
+    background-color: rgb(32, 33, 39) !important;
 }
 
 footer{
